@@ -2,34 +2,34 @@
 <head>
 <title>Ecasound documentation</title>
 </head>
-<insert file=../e-makrot.txt>
-<insert file=../es-makrot.txt>
-<insert name=ecasound_indexbar>
-<hr>
-<p>
-<center><h2>Ecasound documentation</h2></center>
-<hr>
-</p>
-<ul>
-<p>
-<li> <a href=examples.html>Examples</a> - the best place to start
-<li> <a href=manpages.html>Man pages</A> - manual pages for ecasound,
-                                           qtecasound and ecasoundrc
-<li> <a href=users_guide/users_guide.html>User's guide</a> - installing,
-                                                       using, various interfaces,
-                                                       background
-													   info, etc
-<li> <a href="http://www.wakkanet.fi/~kaiv/ecasound/ecasound-list/">
-     Mailing list archives</a> - messages posted to ecasound-list
-<li> <a href=programmers_guide/programmers_guide.html>Programmer's guide</a> -
-    how ecasound works and
-	how to use it in your own projects
 
-<li> <a href=doxygen_pages.html>Source tree</a> - class documentation</p>
+<insert file="../e-makrot.txt">
+<insert file="../es-makrot.txt">
+<insert name="ecasound_indexbar">
+
+<hr />
+
+<center><h2>Ecasound documentation</h2></center>
+
+<hr />
+
+<ul>
+<li> <a href="examples.html">Examples</a> - the best place to start</li>
+<li> <a href="manpages.html">Man pages</a> - manual pages for ecasound,
+                                           qtecasound and ecasoundrc</li>
+<li> <a href="users_guide/users_guide.html">User's guide</a> - installing,
+                                                               using, various interfaces,
+															   background info, etc</li>
+<li> <a href="http://www.wakkanet.fi/~kaiv/ecasound/ecasound-list/">
+     Mailing list archives</a> - messages posted to ecasound-list</li>
+<li> <a href="programmers_guide/programmers_guide.html">Programmer's guide</a> -
+    how ecasound works and
+	how to use it in your own projects</li>
+
+<li> <a href="doxygen_pages.html">Source tree</a> - class documentation</p></li>
 </ul>
-</p>
-<insert name=ecasound_tail>
+
+<insert name=ecasound_tail />
+
 </body>
 </html>
-
-
