@@ -58,7 +58,7 @@ class GENERIC_OSCILLATOR : public OSCILLATOR {
 
   GENERIC_OSCILLATOR* clone(void) const { return new GENERIC_OSCILLATOR(*this); }
   GENERIC_OSCILLATOR* new_expr(void) const { return new GENERIC_OSCILLATOR(*this); }
-  GENERIC_OSCILLATOR(double freq = 0.0f, int mode = 0.0f);
+  GENERIC_OSCILLATOR(double freq = 0.0f, int mode = 0);
   virtual ~GENERIC_OSCILLATOR (void);
 };
 
