@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------
-** Ecasound - User-visible changes (NEWS)      (last edited: 311001) **
+** Ecasound - User-visible changes (NEWS)      (last edited: 191101) **
 -----------------------------------------------------------------------
 
 About the version numbers... "vX.Y[.Z][devT]" :
@@ -18,13 +18,21 @@ About the version numbers... "vX.Y[.Z][devT]" :
 Last officially released version is -*> v2.0.3 *-
 
 ??112001 (v2.1dev5)
+	- added: docs - Documentation/manpages.html
 	- changed: most preset names changed in 'effect_presets'
+	- changed: ecasoundrc - new defaults for mp3 and ogg
+		   output
 	- fixed: processing didn't stop with setups that had loop-
 		 devices connected to multiple input objects
 	- fixed: using loop devices in setups with non-default 
                  internal sample rate could cause unwanted 
   		 resampling
 	- fixed: -kog and -f were broken (since dev4)
+	- fixed: bugs in passing audio format params to 
+                 mp3 and ogg encoders; note! update your 
+		 ~/.ecasoundrc to match the new defaults,
+		 see ecasoundrc(5) man page
+	- fixed: ecasound wrote to ewf-files opened in read-only mode
 31102001 (v2.1dev4)
 	- added: eiam - 'cs-option' commmand; although explicit use 
 		 of cmd-line options as iactive-mod commands (like 
